modules/network/main/vpc.tf
// main VPC
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.prefix}-network-vpc"
    Managed_by = "terraform"
  }
}
